--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- Page styles -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.green-orange.min.css">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-red.min.css" />
     <link rel="stylesheet" href="styles.css">
     <style>
     #view-source {
@@ -74,20 +74,11 @@
           <a class="mdl-navigation__link" href="">ライセンス</a>
         </nav>
       </div>
-      <div class="android-content mdl-layout__content fixed-layout">
+      <div class="android-content mdl-layout__content">
         <a name="top"></a>
         <div class="android-be-together-section mdl-typography--text-center mdl-">
           <div class="logo-font android-slogan">LoLしよう</div>
           <div class="logo-font android-sub-slogan">楽しく、勝つ。</div>
-          <div class="link-sns">
-            <button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button link-sns-logo">
-              <img src="images/twitter_circle.svg">
-            </button>
-            <button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button link-sns-logo">
-              <img src="images/facebook_circle.svg">
-            </button>
-
-          </div>
           <div class="logo-font android-create-character">
             <button class="logo-font mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
               加入したい方はこちら
@@ -233,30 +224,25 @@
               </div>
             </div>
           </div>
-        </div>
+        </div>-->
 
         <footer class="android-footer mdl-mega-footer">
           <div class="mdl-mega-footer--top-section">
             <div class="mdl-mega-footer--left-section">
-              <button class="mdl-mega-footer--social-btn"></button>
-              &nbsp;
-              <button class="mdl-mega-footer--social-btn"></button>
-              &nbsp;
-              <button class="mdl-mega-footer--social-btn"></button>
-            </div>
-            <div class="mdl-mega-footer--right-section">
-              <a class="mdl-typography--font-light" href="#top">
-                Back to Top
-                <i class="material-icons">expand_less</i>
-              </a>
+              <button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button link-sns-logo">
+                <img src="images/twitter_circle.svg">
+              </button>
+              <button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button link-sns-logo">
+                <img src="images/facebook_circle.svg">
+              </button>
             </div>
           </div>
 
           <div class="mdl-mega-footer--middle-section">
-            <p class="mdl-typography--font-light">Satellite imagery: © 2014 Astrium, DigitalGlobe</p>
-            <p class="mdl-typography--font-light">Some features and devices may not be available in all areas</p>
+            <p class="mdl-typography--font-light">©2017 UECeSports</p>
+            <p class="mdl-typography--font-light">一部の画像は®Riot Gamesに帰属します。</p>
           </div>
-
+          <!--
           <div class="mdl-mega-footer--bottom-section">
             <a class="android-link android-link-menu mdl-typography--font-light" id="version-dropdown">
               Versions
@@ -281,8 +267,8 @@
             <a class="android-link mdl-typography--font-light" href="">Blog</a>
             <a class="android-link mdl-typography--font-light" href="">Privacy Policy</a>
           </div>
-
-        </footer>-->
+          -->
+        </footer>
       </div>
     </div>
     <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
