--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Introducing Lollipop, a sweet new take on Android.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-    <title>Android</title>
+    <title>UECeSports -公式ホームページ-</title>
 
     <!-- Page styles -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
@@ -46,7 +46,7 @@
       <div class="android-header mdl-layout__header mdl-layout__header--waterfall">
         <div class="mdl-layout__header-row">
           <span class="android-title mdl-layout-title">
-            <img class="android-logo-image" src="images/logo_sub.svg"><span class="title">&nbsp&nbspUECLoLサークル</span>
+            <img class="android-logo-image" src="images/logo_sub.svg"><span class="title">&nbsp&nbspUECeSports</span>
           </span>
           <!-- Add spacer, to align navigation to the right in desktop -->
           <div class="android-header-spacer mdl-layout-spacer"></div>
@@ -80,7 +80,7 @@
           <div class="logo-font android-slogan">LoLしよう</div>
           <div class="logo-font android-sub-slogan">楽しく、勝つ。</div>
           <div class="logo-font android-create-character">
-            <button class="logo-font mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+            <button class="logo-font button-box mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
               加入したい方はこちら
             </button>
           </div>
@@ -240,7 +240,7 @@
 
           <div class="mdl-mega-footer--middle-section">
             <p class="mdl-typography--font-light">©2017 UECeSports</p>
-            <p class="mdl-typography--font-light">一部の画像は®Riot Gamesに帰属します。</p>
+            <p class="mdl-typography--font-light">一部の画像、名称は Riot Games に帰属します。</p>
           </div>
           <!--
           <div class="mdl-mega-footer--bottom-section">
