--- a/index.html
+++ b/index.html
@@ -46,17 +46,18 @@
       <div class="android-header mdl-layout__header mdl-layout__header--waterfall">
         <div class="mdl-layout__header-row">
           <span class="android-title mdl-layout-title">
-            <img class="android-logo-image" src="images/logo_sub.svg"><span class="title">&nbsp&nbspUECeSports</span>
+            <img class="android-logo-image" src="images/logo_sub.svg"></span>
           </span>
           <!-- Add spacer, to align navigation to the right in desktop -->
           <div class="android-header-spacer mdl-layout-spacer"></div>
           <!-- Navigation -->
-          <div class="android-navigation-container">
-            <nav class="android-navigation mdl-navigation">
-              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">ニュース</a>
-              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">スケジュール</a>
-              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">加入したい方はこちら</a>
-              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">所属中の方はこちら</a>
+          <div class="navigation-container">
+            <nav class="navigation mdl-navigation">
+              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="index.html">UECeSports</a>
+              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="news.html">ニュース</a>
+              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="schedule.html">スケジュール</a>
+              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="entry.html">加入したい方はこちら</a>
+              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="member.html">所属中の方はこちら</a>
             </nav>
           </div>
           <span class="android-mobile-title mdl-layout-title">
@@ -66,23 +67,21 @@
       </div>
       <div class="android-drawer mdl-layout__drawer">
         <nav class="mdl-navigation">
-          <a class="mdl-navigation__link" href="">ニュース</a>
-          <a class="mdl-navigation__link" href="">スケジュール</a>
-          <a class="mdl-navigation__link" href="">加入したい方はこちら</a>
-          <a class="mdl-navigation__link" href="">所属中の方はこちら</a>
-          <div class="android-drawer-separator"></div>
-          <a class="mdl-navigation__link" href="">ライセンス</a>
+            <a class="mdl-navigation__link" href="news.html">ニュース</a>
+            <a class="mdl-navigation__link" href="schedule.html">スケジュール</a>
+            <a class="mdl-navigation__link" href="entry.html">加入したい方はこちら</a>
+            <a class="mdl-navigation__link" href="member.html">所属中の方はこちら</a>
+            <div class="android-drawer-separator"></div>
+            <a class="mdl-navigation__link" href="license.html">ライセンス</a>
         </nav>
       </div>
       <div class="android-content mdl-layout__content">
         <a name="top"></a>
-        <div class="android-be-together-section mdl-typography--text-center mdl-">
-          <div class="logo-font android-slogan">LoLしよう</div>
-          <div class="logo-font android-sub-slogan">楽しく、勝つ。</div>
-          <div class="logo-font android-create-character">
-            <button class="logo-font button-box mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
-              加入したい方はこちら
-            </button>
+        <div class="top-section mdl-typography--text-center mdl-">
+          <div class="logo-font top-slogan">LoLしよう</div>
+          <div class="logo-font top-sub-slogan">楽しく、勝つ。</div>
+          <div class="logo-font top-entry-button">
+            <button class="logo-font button-box mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">加入したい方はこちら</button>
           </div>
         </div>
         <!--<div class="android-screen-section mdl-typography--text-center">
