--- a/entry.html
+++ b/entry.html
@@ -3,55 +3,83 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
+    <meta name="description" content="Introducing Lollipop, a sweet new take on Android.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+    <title>UECeSports -公式ホームページ-</title>
 
-    <!-- Disable tap highlight on IE -->
-    <meta name="msapplication-tap-highlight" content="no">
-
-    <!-- Web Application Manifest -->
-    <link rel="manifest" href="manifest.json">
-
-    <!-- Add to homescreen for Chrome on Android -->
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta name="application-name" content="Web Starter Kit">
-    <link rel="icon" sizes="192x192" href="../../Downloads/web-starter-kit-0.6.5/app/images/touch/chrome-touch-icon-192x192.png">
-
-    <!-- Add to homescreen for Safari on iOS -->
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="Web Starter Kit">
-    <link rel="apple-touch-icon" href="../../Downloads/web-starter-kit-0.6.5/app/images/touch/apple-touch-icon.png">
-
-    <!-- Tile icon for Win8 (144x144 + tile color) -->
-    <meta name="msapplication-TileImage" content="images/touch/ms-touch-icon-144x144-precomposed.png">
-    <meta name="msapplication-TileColor" content="#2F3BA2">
-
-    <!-- Color the status bar on mobile devices -->
-    <meta name="theme-color" content="#2F3BA2">
-
-    <!-- SEO: If your mobile URL is different from the desktop URL, add a canonical link to the desktop page https://developers.google.com/webmasters/smartphone-sites/feature-phones -->
-    <!--
-    <link rel="canonical" href="http://www.example.com/">
-    -->
+    <!-- Page styles -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-red.min.css" />
+    <link rel="stylesheet" href="styles.css">
+    <style>
+        #view-source {
+            position: fixed;
+            display: block;
+            right: 0;
+            bottom: 0;
+            margin-right: 40px;
+            margin-bottom: 40px;
+            z-index: 900;
+        }
+    </style>
 </head>
 <body>
 <!-- Add your site or app content here -->
+<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+    <div class="android-header mdl-layout__header mdl-layout__header--waterfall">
+        <div class="mdl-layout__header-row">
+          <span class="android-title mdl-layout-title">
+            <img class="android-logo-image" src="images/logo_sub.svg"><span class="title">&nbsp&nbspUECeSports</span>
+          </span>
+            <!-- Add spacer, to align navigation to the right in desktop -->
+            <div class="android-header-spacer mdl-layout-spacer"></div>
+            <!-- Navigation -->
+            <div class="navigation-container">
+                <nav class="navigation mdl-navigation">
+                    <a class="mdl-navigation__link mdl-typography--text-uppercase" href="index.html">UECeSports</a>
+                    <a class="mdl-navigation__link mdl-typography--text-uppercase" href="news.html">ニュース</a>
+                    <a class="mdl-navigation__link mdl-typography--text-uppercase" href="schedule.html">スケジュール</a>
+                    <a class="mdl-navigation__link mdl-typography--text-uppercase" href="entry.html">加入したい方はこちら</a>
+                    <a class="mdl-navigation__link mdl-typography--text-uppercase" href="member.html">所属中の方はこちら</a>
+                </nav>
+            </div>
+          <span class="android-mobile-title mdl-layout-title">
+            <img class="logo-image-mobile" src="images/logo_sub.svg"><span class="title">&nbsp&nbspUECLoLサークル</span>
+          </span>
+        </div>
+    </div>
+    <div class="android-drawer mdl-layout__drawer">
+        <nav class="mdl-navigation">
+            <a class="mdl-navigation__link" href="news.html">ニュース</a>
+            <a class="mdl-navigation__link" href="schedule.html">スケジュール</a>
+            <a class="mdl-navigation__link" href="entry.html">加入したい方はこちら</a>
+            <a class="mdl-navigation__link" href="member.html">所属中の方はこちら</a>
+            <div class="android-drawer-separator"></div>
+            <a class="mdl-navigation__link" href="license.html">ライセンス</a>
+        </nav>
+    </div>
+    <div class="android-content mdl-layout__content">
+        <a name="top"></a>
+        <div class="entry-section mdl-typography--text-left mdl-">
+            <div class="logo-font common-slogan">加入申請</div>
+            <div class="logo-font common-sub-slogan">サークルに入りたい方へ</div>
+            </div>
+        </div>
+        <footer class="android-footer mdl-mega-footer">
+            <div class="mdl-mega-footer--top-section">
+                <div class="mdl-mega-footer--left-section"></div>
+            </div>
 
-<!-- build:js scripts/main.min.js -->
-<script src="../../Downloads/web-starter-kit-0.6.5/app/scripts/main.js"></script>
-<!-- endbuild -->
-
-<!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-<script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-    ga('create', 'UA-XXXXX-X', 'auto');
-    ga('send', 'pageview');
-</script>
-<!-- Built with love using Web Starter Kit -->
+            <div class="mdl-mega-footer--middle-section">
+                <p class="mdl-typography--font-light">©2017 UECeSports</p>
+                <p class="mdl-typography--font-light">一部の画像、名称は Riot Games に帰属します。</p>
+            </div>
+            <div class="mdl-mega-footer--bottom-section">
+            </div>
+        </footer>
+    </div>
+<script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 </body>
 </html>
+
