--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <div class="android-header mdl-layout__header mdl-layout__header--waterfall">
         <div class="mdl-layout__header-row">
           <span class="android-title mdl-layout-title">
-            <img class="android-logo-image" src="images/logo_sub.svg"></span>
+            <img class="logo-image" src="images/logo_sub.svg"><span class="title">&nbsp&nbspUECeSports</span></span>
           </span>
           <!-- Add spacer, to align navigation to the right in desktop -->
           <div class="android-header-spacer mdl-layout-spacer"></div>
@@ -61,7 +61,7 @@
             </nav>
           </div>
           <span class="android-mobile-title mdl-layout-title">
-            <img class="logo-image-mobile" src="images/logo_sub.svg"><span class="title">&nbsp&nbspUECLoLサークル</span>
+            <img class="logo-image-mobile" src="images/logo_sub.svg"><span class="title">&nbsp&nbspUECeSports</span>
           </span>
         </div>
       </div>
