--- a/license.html
+++ b/license.html
@@ -30,7 +30,7 @@
     <div class="android-header mdl-layout__header mdl-layout__header--waterfall">
         <div class="mdl-layout__header-row">
           <span class="android-title mdl-layout-title">
-            <img class="android-logo-image" src="images/logo_sub.svg"><span class="title">&nbsp&nbspUECeSports</span>
+            <img class="logo-image" src="images/logo_sub.svg"><span class="title">&nbsp&nbspUECeSports</span>
           </span>
             <!-- Add spacer, to align navigation to the right in desktop -->
             <div class="android-header-spacer mdl-layout-spacer"></div>
@@ -45,7 +45,7 @@
                 </nav>
             </div>
           <span class="android-mobile-title mdl-layout-title">
-            <img class="logo-image-mobile" src="images/logo_sub.svg"><span class="title">&nbsp&nbspUECLoLサークル</span>
+            <img class="logo-image-mobile" src="images/logo_sub.svg"><span class="title">&nbsp&nbspUECeSports</span>
           </span>
         </div>
     </div>
