Add twitter link | Instant license page

--- a/index.html
+++ b/index.html
@@ -230,11 +230,8 @@
               <p class="mdl-typography--font-light">一部の画像、名称は Riot Games に帰属します。</p>
           </div>
           <div class="mdl-mini-footer__right-section">
-              <button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button link-sns-logo">
+              <button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button link-sns-logo" onclick="location.href='https://twitter.com/uecesports'">
                   <img src="images/twitter_circle.svg">
-              </button>
-              <button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button link-sns-logo">
-                  <img src="images/facebook_circle.svg">
               </button>
           </div>
         </footer>
