--- a/license.html
+++ b/license.html
@@ -65,17 +65,15 @@
             <div class="logo-font common-single-slogan">ライセンス</div>
             <div class="logo-font common-sub-slogan"></div>
         </div>
+        <p>工事中</p>
         <footer class="footer mdl-mini-footer">
             <div class="mdl-mini-footer--left-section">
                 <p class="mdl-typography--font-light">©2017 UECeSports</p>
                 <p class="mdl-typography--font-light">一部の画像、名称は Riot Games に帰属します。</p>
             </div>
             <div class="mdl-mini-footer__right-section">
-                <button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button link-sns-logo">
+                <button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button link-sns-logo" onclick="location.href='https://twitter.com/uecesports'">
                     <img src="images/twitter_circle.svg">
-                </button>
-                <button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button link-sns-logo">
-                    <img src="images/facebook_circle.svg">
                 </button>
             </div>
         </footer>
