--- a/schedule.html
+++ b/schedule.html
@@ -69,7 +69,7 @@
         <footer class="footer mdl-mini-footer">
             <div class="mdl-mini-footer--left-section">
                 <p class="mdl-typography--font-light">©2017 UECeSports</p>
-                <p class="mdl-typography--font-light">一部の画像、名称は Riot Games に帰属します。</p>
+                <p class="mdl-typography--font-light">UECeSportsは、ライアットゲームズが公式承認するものではなく、ライアットゲームズ又はリーグ・オブ・レジェンドの製作・管理に正式に関与したいかなる者の見解・意見に基づくものではありません。リーグ・オブ・レジェンド及びライアットゲームズは、Riot Games, Inc.の商標又は登録商標です。リーグ・オブ・レジェンド © Riot Games, Inc.</p>
             </div>
             <div class="mdl-mini-footer__right-section">
                 <button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button link-sns-logo" onclick="location.href='https://twitter.com/uecesports'">
