Add Discord msg

--- a/entry.html
+++ b/entry.html
@@ -72,6 +72,7 @@
                     <li class="mdl-list__item">2.UECeSportsに所属していることがわかる状態での暴言、迷惑行為、チート行為を禁止します。(ゲーム内に限らずTwitterやFacebook等のSNSや掲示板も含まれます。）</li>
                     <li class="mdl-list__item">3.UECeSports内で知り得た情報を許可無く外部に漏洩させることを禁止します。</li>
                     <li class="mdl-list__item">4.その他、サークルの所属を不適切だと判断した場合、強制的に除名処分をすることがあります。</li>
+                    <li class="mdl-list__item">5.UECeSportsでは連絡、VC等をDiscordにて行います。AndroidまたはiPhoneとパソコンのアプリ導入が必須です。</li>
                 </ul>
             </div>
             <div class="mdl-dialog__actions">
