Added game caption

--- a/dev/index.html
+++ b/dev/index.html
@@ -9,10 +9,12 @@
 
     <link rel="manifest" href="site.webmanifest">
     <link rel="apple-touch-icon" href="icon.png">
+    <link href="https://fonts.googleapis.com/earlyaccess/sawarabimincho.css" rel="stylesheet">
     <!-- Place favicon.ico in the root directory -->
 
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
+    
 </head>
 
 <body>
@@ -28,8 +30,8 @@
             <!-- Essence -->
             <div class="comeson">
                 <div class="welcome-sector__logo"><img src="img/logo_sub.svg" width="100px"></div>
-                <div class="welcome-sector__heading">UECeSports</div>
-                <div class="welcome-sector__caption">楽しく、勝つ。</div>
+                <div class="welcome-sector__heading welcome-sector-text">UECeSports</div>
+                <div class="welcome-sector__caption welcome-sector-text">楽しく、勝つ。</div>
                 <div class="welcome-sector__entry-btn">
                     <svg class="welcome-sector__entry-btn__svg" id="SVG-Circus-c817bf1c-2f4f-7baa-dcc1-7bbe493959a0" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid meet">
                         <polygon id="actor_2" points="87.06,19.77 44.36,11.47 23.28,49.51 52.94,81.32 92.36,62.94"
@@ -117,7 +119,7 @@
                             ]]>
                         </script>
                     </svg>
-                    <div class="welcome-sector__entry-btn__caption">加入する</div>
+                    <div class="welcome-sector__entry-btn__caption welcome-sector-text">加入する</div>
                 </div>
             </div>
             <!-- BG -->
@@ -130,10 +132,13 @@
             <div class="produce">
                 <div class="produce__lol">
                     <img src="img/League%20of%20Legends%20Logo.png" width="200px">
+                    <div class="produce__lol__caption produce-text">チームワークを考える</div>
                 </div>
                 <div class="produce__pubg">
                     <img src="img/PUBG%20logo.png" width="200x">
+                    <div class="produce__pubg__caption produce-text">ドン勝食べる?</div>
                 </div>
+                </div
             </div>
         </div>
     </div>
